1. Метод .of [#352251]