@@ -13,12 +13,12 @@ public class NotifyAccountTest {
 
 	@Test
 	public void sent() {
-		List<Account> accounts = Arrays.asList(
+		List<Account> accounts = List.of(
 				new Account("123", "Petr Arsentev", "eDer3432f"),
 				new Account("142", "Petr Arsentev", "000001")
 		);
 		HashSet<Account> expect = new HashSet<>(
-				Arrays.asList(
+				List.of(
 						new Account("123", "Petr Arsentev", "eDer3432f"),
 						new Account("142", "Petr Arsentev", "000001")
 				)
@@ -28,13 +28,13 @@ public class NotifyAccountTest {
 
 	@Test
 	public void deleteDuplicate() {
-		List<Account> accounts = Arrays.asList(
+		List<Account> accounts = List.of(
 				new Account("123", "Petr Arsentev", "eDer3432f"),
 				new Account("142", "Petr Arsentev", "000001"),
 				new Account("123", "Petr Arsentev", "HGb333")
 		);
 		HashSet<Account> expect = new HashSet<>(
-				Arrays.asList(
+				List.of(
 						new Account("123", "Petr Arsentev", "eDer3432f"),
 						new Account("142", "Petr Arsentev", "000001")
 				)
@@ -44,13 +44,13 @@ public class NotifyAccountTest {
 
 	@Test
 	public void deleteDuplicateAll() {
-		List<Account> accounts = Arrays.asList(
+		List<Account> accounts = List.of(
 				new Account("123", "Petr Arsentev", "eDer3432f"),
 				new Account("123", "Petr Arsentev", "3234565G"),
 				new Account("123", "Petr Arsentev", "VJvy3")
 		);
 		HashSet<Account> expect = new HashSet<>(
-				Arrays.asList(
+				List.of(
 						new Account("123", "Petr Arsentev", "eDer3432f")
 				)
 		);
